--- a/Index.html
+++ b/Index.html
@@ -1,27 +1,36 @@
 <! DOCTYPE html>
 <html
 	<head>
-		<title>Hello world</title>
-		<link href="styles.css" rel="stylesheet">
-		<links href="https://fonts.googleleapis.com/css?family=lobster" rel=" stylesheet">
+		<title> Kai </title>
 </head>
-<body>
-hello world!
+<body bgcolor="#ffc2ec">
+
 
 	</body>
 
-<h1>kaira colvin</h1>
-<h2>student at the university of maine</h2>
+<h1><font color="4703f6">Kaira Colvin</h1>
+<h2><font color="4703f6">Student at the University of Maine</h2>
+<h3> <font color="4703f6">First year marketing major</h3>
+<IMG SRC="kaira 2.jpg" width="500 Height="600>
 
-[portrait]
+<p><i>Welcome to My Homepage.</i></p>
+<p><i> I'm a marketing major at the University of Maine. I'm one of four siblings, originally from Massachusettes,pretty fun time, read this site to learn about me</p>
 
-<p><i>welcome to my homepage.</p>
-<p><i> I'm a marketing major at the university of maine. I'm one of four, originally from Massachusettes,pretty fun time, read this site to learn about me</p>
 
+<h4>Interests include</h4>
+<ul>
+<li>listening to music</li>
+<li>traveling </li>
+<li>chicken nuggets</li>
+</ul>
 <p>
-<img SRC="underconstruction.jpg" width=150>
+Links to:
+<A HREF=" HTTPS://Umaine.edu/"> [Umaine] </A> 
+<A href=" https://instagram.com/kaira_colvin/">[Instagram]</A>
 </p>
-
-Links to:[UMaine] [instagram]
+<A href="index.html"> home</A>
+<A Href="family.HTML"> Family</A>
+<A href="friends.HTML"> Friends</A>
+<A href="TRAVEL.HTML"> Travel</A>
 
 </html>
