--- a/travel.html
+++ b/travel.html
@@ -21,7 +21,7 @@
 		<img src="kikito2.jpg" width="500 height="600>
 		<p> while i was there i was a part of two parties and for both my dance partner was my friend kikito who did this as a favor</p>
 		<img src="cousins.jpg" width="500 height="600>
-		<p> My sister my two cousins and I at the beach one afternoon</P>
+		<p> My sisters all my cousins and I at the beach one afternoon</P>
 		<img src="newyears.jpg" width="500 height="600>
 		<p> For New Years Eve everyone went to my cousins house where we laughed and danced all night</P>
 		<img src="teleferico.jpg" width="500 height="600>
