--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ Links to:
 <A href=" https://instagram.com/kaira_colvin/">[Instagram]</A>
 </p>
 <A href="index.html"> home</A>
-<A Href="family.HTML"> Family</A>
-<A href="friends.HTML"> Friends</A>
-<A href="TRAVEL.HTML"> Travel</A>
+<A Href="family.html"> Family</A>
+<A href="friends.html"> Friends</A>
+<A href="travel.html"> Travel</A>
 
 </html>
