--- a/family.html
+++ b/family.html
@@ -10,16 +10,16 @@
 		<img SRC="mom.jpg" width="500 height="600>
 		<p> My moms name is Synthia, she was born in the Dominican republic, She is the oldest of four, and had four of her own kids.</p>
 		<h2> Dad</h2>
-		<img SRC="dad.jpg" width="500 height="600>
+		<img SRC="dad.JPG" width="500 height="600>
 		<p> My dads name is neil,he was born in Louisiana, he is the third child of four and had four of his own kids.</p>
 	<h2> Aunty</h2>
-	<img SRC="aunty.jpg" width="500 heaight="600>
+	<img SRC="aunty.JPG" width="500 heaight="600>
 	<p> My aunts name is Yaskaira, she was also born in the Dominican republic,she is my moms younger sister and my godmother</p>
 	<h2> Grandma </h2>
-	<img SRC="grandam.jpg" width="500 height="600>
+	<img SRC="grandam.JPG" width="500 height="600>
 	<p> my grandmas name is Santiaguita,she goes by ana, she has four children and six grandchildren</p>
 	<h2> Siblings</h2>
-	<img SRC="kasey.jpg" width="500 height="600>
+	<img SRC="kasey.JPG" width="500 height="600>
 	<p> I have four siblings, my brother Cory is the oldest followed by me and my twin sister Kira and last but not least my youngest sister Kasey</p>
 	<A href="index.html">Home</A>
 	<A href="family.html"> Family</A>
