--- a/friends.html
+++ b/friends.html
@@ -11,7 +11,7 @@
 	<img SRC="jessandcec.jpg" width="500 height="600>
 	<h2><font color="4703f6"> Kira,Cecily and Jalynn</h2>
 	<p> we've been friends since before highschool and continue to be today</p>
-	<img SRC="prom.jpg" width="500 height="600>
+	<img SRC="prom.JPG" width="500 height="600>
 	<img SRC="grad.jpg" width="500 height="600>
 	<p> new friends and old friends always come together</p>
 	<img src="friends.jpg" width="500 height="600>
