--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h1><font color="4703f6">Kaira Colvin</h1>
 <h2><font color="4703f6">Student at the University of Maine</h2>
 <h3> <font color="4703f6">First year marketing major</h3>
-<IMG SRC="kaira 2.jpg" width="500 Height="600>
+<IMG SRC="kaira 2.JPG" width="500 Height="600>
 
 <p><i>Welcome to My Homepage.</i></p>
 <p><i> I'm a marketing major at the University of Maine. I'm one of four siblings, originally from Massachusettes,pretty fun time, read this site to learn about me</p>
