--- a/travel.html
+++ b/travel.html
@@ -7,69 +7,69 @@
 		</body>
 		<h1>Travel</h1>
 		<h2><font color="4703f6">Dominican Republic</h2>
-		<img src="airport.jpg" width="500 height="600>
+		<img src="airport.JPG" width="500 height="600>
 		<p> My mom, my sister and i getting ready to board the plane in florida to go to the Dominican Republic</p>
-		<img src="primos.jpg" width="500 height="600>
+		<img src="primos.JPG" width="500 height="600>
 		<p> this is the first time in a little over 11 years that my sisters and I saw my cousins</P>
-		<img src="andrea.jpg" width="500 height="600>
+		<img src="andrea.JPG" width="500 height="600>
 		<p> My cousin Andrea and i getting ready to make our way to our cousin Carla's birthday party that I was a part of</p>
-		<img src="mello.jpg" width="500 height="600>
+		<img src="mello.JPG" width="500 height="600>
 		<p> Almost every night there was parties and dancing on the street</P>
-		<img src="em.jpg" width="500 height="600>
+		<img src="em.JPG" width="500 height="600>
 		<p> Everyone was invited and everyone had fun</p>
-		<img src="kikito1.jpg" width="500 height="600>
-		<img src="kikito2.jpg" width="500 height="600>
+		<img src="kikito1.JPG" width="500 height="600>
+		<img src="kikito2.JPG" width="500 height="600>
 		<p> while i was there i was a part of two parties and for both my dance partner was my friend kikito who did this as a favor</p>
-		<img src="cousins.jpg" width="500 height="600>
+		<img src="cousins.JPG" width="500 height="600>
 		<p> My sisters all my cousins and I at the beach one afternoon</P>
-		<img src="newyears.jpg" width="500 height="600>
+		<img src="newyears.JPG" width="500 height="600>
 		<p> For New Years Eve everyone went to my cousins house where we laughed and danced all night</P>
-		<img src="teleferico.jpg" width="500 height="600>
+		<img src="teleferico.JPG" width="500 height="600>
 		<p> a lovely picture of me pretending to hold a giant statue that is on top of the mountain close to where my family's house is</p>
-		<img src="ki.jpg" width="500 height="600>
+		<img src="ki.JPG" width="500 height="600>
 		<p> A picture with a view:My sister and I looking out at the water near our house</p>
-		<img src="boat.jpg" width="500 height="600>
+		<img src="boat.JPG" width="500 height="600>
 		<p> This picture was taken on the way to a sand bar in the middle of the ocean but dont be fooled by my happy expression I was quite terrified</p>
-		<img src="beach.jpg" width="500 height="600>
+		<img src="beach.JPG" width="500 height="600>
 		<p> this is a picture I took after I bought some homemade candy on the beach</p>
-		<img src="leave.jpg" width="500 height="600>
-		<img src="alejandro.jpg" width="500 height="600>
-		<img src="kikito3.jpg" width="500 height="600>
+		<img src="leave.JPG" width="500 height="600>
+		<img src="alejandro.JPG" width="500 height="600>
+		<img src="kikito3.JPG" width="500 height="600>
 		<p> The hardest part of this whole trip was leaving. But it made me super excited for the next time I go back</p>
 		
 		<h2> Cruise to the Bahamas </h2>
-		<img src="cruise.jpg" width="500 height="600>
+		<img src="cruise.JPG" width="500 height="600>
 		<p> this is the cruise deck</p>
-		<img src="back.jpg" width="500 height="600>
+		<img src="back.JPG" width="500 height="600>
 		<p> a picture of my sister our friend and myself looking ot at the water on deck</p>
-		<img src="bahamas.jpg" width="500 height="600>
+		<img src="bahamas.JPG" width="500 height="600>
 		<p> my sister my aunt and I when we first arrived to the Nassau Bahamas port</p>
-		<img src="kcscuba" height="600 width="500>
+		<img src="kcscuba.JPG" height="600 width="500>
 		<img src="scuba.jpg" width="500 height="600>
 		<p> we got the chance to go snorkeling with stingrays and to handle other sea creaturs</P>
 		<img src="kcphoto.jpg" width="500 height="600>
-		<img src="momphoto.jpg" width="500 height="600>
+		<img src="momphoto.JPG" width="500 height="600>
 		<p> every night before diner there would be profesional photographers set up throughout the boat and we got the chance to have some pictures taken of us</p>
-		<img src="kase.jpg" width="500 height="600>
+		<img src="kase.JPG" width="500 height="600>
 		<p> me and my sister in half moon kay with the parrot outside of margaritaville</p>
-		<img src="squid.jpg" width="500 height="600>
+		<img src="squid.JPG" width="500 height="600>
 		<p> my mom and I with our favorite statue on the cruise</p>
 		<h2> New York </h2>
 		<img src="nyc.jpg" width="500 height="600>
 		<p> a Picture i took of the New York skyline will driving in</p>
-		<img src="stairs.jpg" width="500 height="600>
+		<img src="stairs.JPG" width="500 height="600>
 		<p> my sisters and I on the giant stairs in time square</p>
-		<img src="mum.jpg" width="500 height="600>
+		<img src="mum.JPG" width="500 height="600>
 		<p> me and my sister with my mom in time square</p>
-		<img src="laughs.jpg" width="500 height="600>
+		<img src="laughs.JPG" width="500 height="600>
 		<p> Candid of us laughing at something that was probably not funny</P>
 		<img src="CITY.JPG" width="500 height="600>
 		<p> A picture that we tried to make look candid that in fact was not candid </p>
-		<img src="mm.jpg" width="500 height="600>
+		<img src="mm.JPG" width="500 height="600>
 		<p> My sister and I with the giant M&M in the Hershey's chocolate factory</P>
-		<img src="chicken.jpg" width="500 height="600>
+		<img src="chicken.JPG" width="500 height="600>
 		<p> while in New York we visited my cousin and i had the bright idea to catch a chicken, and actually succeeded</p>
-		<img src="train.jpg" width="500 height="600>
+		<img src="train.JPG" width="500 height="600>
 		<P> Me and my sister for the first time ever on a New York subway</p>
 		<A href="index.html">Home</A>
 		<A href="family.Html">Family</A>
