--- a/friends.html
+++ b/friends.html
@@ -25,6 +25,6 @@
 	<A href="index.html"> Home</A>
 	<A href="family.html"> Family</A>
 	<A href="friends.html"> Friends</A>
-	<A href="Travel.html">Travel</A>
+	<A href="travel.html">Travel</A>
 	
 	
