--- a/family.html
+++ b/family.html
@@ -7,7 +7,7 @@
 		</body>
 		<h1> Family</h1>
 		<h2> <font color="4703f6">Mom</h2>
-		<img SRC="mom.jpg" width="500 height="600>
+		<img SRC="mom.JPG" width="500 height="600>
 		<p> My moms name is Synthia, she was born in the Dominican republic, She is the oldest of four, and had four of her own kids.</p>
 		<h2> Dad</h2>
 		<img SRC="dad.JPG" width="500 height="600>
